--- a/pages/subpages/mall/scenic-spot/subpages/order-check/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/order-check/index.wxml
@@ -1,11 +1,41 @@
 <view class="container">
   <view class="ticket">
-    <view class="ticket-info">
-      <view class="ticket-name row">千岛湖森林氧吧 成人票</view>
+    <view class="ticket-name">千岛湖森林氧吧 成人票</view>
+    <view class="split-line" />
+    <view class="ticket-more">
+      <view class="date-picker">
+        <view class="date-picker-title">选择日期</view>
+        <view class="date-picker-list row">
+          <view 
+            class="date-picker-item {{curDateIdx === index ? 'active' : ''}}" 
+            wx:for="{{recentlyDataList}}" 
+            wx:key="index"
+            bindtap="selectDate"
+            data-index="{{index}}"
+          >
+            <view class="date">{{item.date}}</view>
+            <price-unit price="{{item.price}}" color="#333" fontSize="22rpx" integerFontSize="28rpx" />
+          </view>
+          <view class="more-date-btn row">
+            <view class="btn-desc">
+              <view>更多</view>
+              <view>日期</view>
+            </view>
+            <image class="more-icon" src="./images/arrow-right.png" />
+          </view>
+        </view>
+      </view>
+      <view class="count-control row between">
+        <view class="count-control-title">购买数量</view>
+        <view class="step-wrap row">
+          <price-unit style="margin-right: 24rpx;" price="{{40}}" fontSize="22rpx" integerFontSize="28rpx" />
+          <van-stepper integer />
+        </view>
+      </view>
       <view class="ticket-tips">
         <view class="tips-wrap row">
           <image class="tips-icon" src="./images/limit.png" />
-          <view class="tips">指定入园日期3天内有效</view>
+          <view class="tips">04月06日至04月09日内有效</view>
         </view>
         <view class="tips-wrap row">
           <image class="tips-icon" src="./images/time.png" />
@@ -22,35 +52,25 @@
         </view>
       </view>
     </view>
-    <view class="split-line" />
-    <view class="date-picker">
-      <view class="date-picker-title">选择日期</view>
-      <view class="date-picker-list row">
-        <view 
-          class="date-picker-item {{curDateIdx === index ? 'active' : ''}}" 
-          wx:for="{{recentlyDataList}}" 
-          wx:key="index"
-          bindtap="selectDate"
-          data-index="{{index}}"
-        >
-          <view class="date">{{item.date}}</view>
-          <price-unit price="{{item.price}}" color="#333" fontSize="22rpx" integerFontSize="28rpx" />
-        </view>
-        <view class="more-date-btn row">
-          <view class="btn-desc">
-            <view>更多</view>
-            <view>日期</view>
-          </view>
-          <image class="more-icon" src="./images/arrow-right.png" />
-        </view>
-      </view>
-    </view>
+  </view>
 
-    <view class="count-control row between">
-      <view class="count-control-title">购买数量</view>
-      <view class="step-wrap row">
-        <price-unit style="margin-right: 24rpx;" price="{{40}}" />
-        <van-stepper integer />
+  <view class="card">
+    <view class="card-title row baseline">
+      <view>游客信息</view>
+      <view class="title-tips">需添加1位游客用于接受出票信息</view>
+    </view>
+    <view class="tourist-info-list">
+      <view class="tourist-info-item row">
+        <view class="tourist-info-label">出游人</view>
+        <input class="tourist-info-input" placeholder="请输入游客姓名" />
+      </view>
+      <view class="tourist-info-item row">
+        <view class="tourist-info-label">手机号</view>
+        <input class="tourist-info-input" type="number" placeholder="请输入手机号" />
+      </view>
+      <view class="tourist-info-item row">
+        <view class="tourist-info-label">身份证</view>
+        <input class="tourist-info-input" type="idcard" placeholder="请输入游客身份证" />
       </view>
     </view>
   </view>
