--- a/pages/subpages/mall/scenic-spot/index.wxss
+++ b/pages/subpages/mall/scenic-spot/index.wxss
@@ -37,78 +37,44 @@
   font-size: 14px;
 }
 
-.search-filter {
+.category-tabs {
   display: flex;
-  padding: 0 20px;
-  border-top: 1px solid #f5f6f8;
-}
-.filter-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex: 1;
+  padding: 0 8px;
   height: 44px;
-  color: #333;
+  white-space: nowrap;
+}
+.category-tab {
+  display: inline-block;
+  padding: 0 10px;
+  height: 44px;
+  color: #999;
   font-size: 14px;
+  line-height: 44px;
+  transition: .1s ease;
 }
-.filter-item.active {
-  font-weight: bold;
+.category-tab.active {
+  position: relative;
+  color: #111;
+  font-size: 16px;
+  font-weight: 600;
+  transition: .1s ease;
 }
-.filter-icon {
-  margin-left: 4px;
-  width: 10px;
-  height: 10px;
-  transform: rotate(0);
-  transition: transform .3s ease;
-}
-.filter-icon.active {
-  transform: rotate(180deg);
-  transition: transform .3s ease;
-}
-
-.mask {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6);
-  z-index: 60;
-}
-.filter-options {
-  position: fixed;
-  width: 100%;
-  padding: 0 12px;
-  background: #fff;
-  transform: translateY(-100%);
-  transition: transform .3s ease;
-  z-index: 80;
-}
-.filter-options.show {
-  transform: translateY(0);
-  transition: transform .3s ease;
-}
-.option {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 50px;
-  border-bottom: 1px solid #f5f6f8;
-}
-.option:last-child {
-  border-bottom: none;
-}
-.option-name {
-  color: #333;
-  font-size: 13px;
-}
-.option-name.active {
-  font-weight: bold;
-}
-.selected-icon {
-  width: 16px;
-  height: 16px;
+.category-tab.active::before {
+  position: absolute;
+  left: 50%;
+  bottom: 14px;
+  transform: translateX(-50%);
+  content: '';
+  width: 68%;
+  height: 4px;
+  background: rgba(145, 217, 243, 0.8);
+  border-radius: 2px;
+  z-index: -1;
 }
 
-.scenic-spots {
-  padding: 0 28rpx;
-  background: #fff;
+.no-more-tips {
+  margin-top: 36rpx;
+  color: #999;
+  font-size: 24rpx;
+  text-align: center;
 }
