--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-list/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-list/index.wxml
@@ -17,7 +17,7 @@
     </view>
     <view class="score-wrap">
       <van-rate value="{{item.rate}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half />
-      <text class="score">{{item.rate}}分</text>
+      <text class="score">{{item.rate || '暂无评'}}分</text>
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
