--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxss
@@ -44,6 +44,9 @@
 .grade-wrap {
   font-size: 8px;
 }
+.spot-grade {
+  margin-left: 4rpx;
+}
 
 .menu-wrap {
   height: 44px;
@@ -186,7 +189,6 @@
   margin-left: 10rpx;
   color: #333;
   font-size: 26rpx;
-  font-weight: bold;
 }
 
 .info-list-wrap {
