--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/index.wxml
@@ -87,7 +87,7 @@
   </view>
 
   <view class="info-list-wrap">
-    <navigator class="info-list row between" url="./subpages/more-info/index?id={{scenicInfo.id}}" hover-class="none">
+    <view class="info-list row between" bindtap="checkMoreInfo">
       <view class="row">
         <image class="clock-icon" src="./images/time.png" />
         <view class="opening-status row {{scenicInfo.status !== 1 ? 'closed' : ''}}">{{scenicInfo.status !== 1 ? '今日已闭园' : '开园中'}}</view>
@@ -97,7 +97,7 @@
         <view class="more-detail">详情</view>
         <image class="more-icon" src="./images/more.png" />
       </view>
-    </navigator>
+    </view>
     <view class="info-list row between">
       <view class="row">
         <image class="position-icon" src="./images/position.png" />
@@ -112,10 +112,10 @@
 
   <view class="content-title-wrap row between">
     <view class="content-title">景点门票</view>
-    <navigator class="content-title-tips row" url="./subpages/more-info/index?id={{scenicInfo.id}}&menuIdx=2" hover-class="none">
+    <view class="content-title-tips row" wx:if="{{scenicInfo.policyList.length}}" bindtap="checkPolicy">
       <text>优待政策</text>
       <image class="more-icon" src="./images/more-blue.png" />
-    </navigator>
+    </view>
   </view>
   <scroll-view class="ticket-type-menu" scroll-x>
     <view 
