--- a/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/components/scenic-spot-item/index.wxml
@@ -1,6 +1,5 @@
 <navigator 
   class="scenic-spot"
-  wx:for="{{list}}"
   wx:key="index"
   url="/pages/subpages/mall/scenic-spot/subpages/spot-detail/index?id={{item.id}}"
   hover-class="none"
@@ -21,7 +20,7 @@
     </view>
     <view class="position-wrap">
       <image class="position-icon" src="./images/position.png" />
-      <text>{{item.address}}，据您86km</text>
+      <text>{{item.address}}，据您{{distance}}km</text>
     </view>
     <view class="price-info">
       <view class="sales">已售 13506</view>
