--- a/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/scenic-spot-item/index.wxml
+++ b/pages/subpages/mall/scenic-spot/subpages/spot-detail/components/scenic-spot-item/index.wxml
@@ -3,7 +3,7 @@
   <view class="scenic-spot-info">
     <view class="scenic-spot-name omit single-line">{{info.name}}</view>
     <view class="scenic-spot-rate-wrap row">
-      <van-rate value="{{info.rate || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half />
+      <van-rate value="{{info.rate || 0}}" size="12" gutter="0" color="#ffd21e" void-icon="star" void-color="#eee" allow-half readonly />
       <view class="scenic-spot-rate">
         <text style="font-weight: bold;">{{info.rate}}</text>
         <text>分</text>
