--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -49,9 +49,9 @@
         <image class="function-icon" src="./images/live.png" />
         <view class="function-desc">我的直播</view>
       </view>
-      <navigator class="function-item" wx:if="{{userInfo.shopId}}" url="/pages/subpages/mine/shop-management/index" hover-class="none">
+      <navigator class="function-item" wx:if="{{userInfo.shopId || userInfo.scenicShopId}}" url="/pages/subpages/mine/merchant-management/index" hover-class="none">
         <image class="function-icon" src="./images/shop.png" />
-        <view class="function-desc">我的店铺</view>
+        <view class="function-desc">商家管理</view>
       </navigator>
     </view>
 
