--- a/pages/tab-bar-pages/mine/index.wxml
+++ b/pages/tab-bar-pages/mine/index.wxml
@@ -51,7 +51,7 @@
       </view>
       <navigator class="function-item" wx:if="{{userInfo.shopId || userInfo.scenicShopId}}" url="/pages/subpages/mine/merchant-management/index" hover-class="none">
         <image class="function-icon" src="./images/shop.png" />
-        <view class="function-desc">商家管理</view>
+        <view class="function-desc">商家中心</view>
       </navigator>
     </view>
 
